add second music on level 1

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,11 +4,10 @@ name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
-export_filter="resources"
-export_files=PoolStringArray( "res://Arts/Aloes_transp.png", "res://Arts/FLOWER1-Sheet.png", "res://Arts/Project pétanque _crâne_.png", "res://Arts/Project pétanque _homme de main offre la balle_.png", "res://Arts/Project pétanque _homme de main_.png", "res://Arts/Project pétanque _pedro ready for battle_.png", "res://Arts/Project pétanque _pedro_.png", "res://Arts/Project pétanque _robot_  (1).png", "res://Arts/Project pétanque _shaman_.png", "res://Arts/Project_petonque _taupe_.png", "res://Arts/Project_petonque_chat.png", "res://Arts/Separate-Line.png", "res://Arts/Timmy2-Sheet.png", "res://Arts/Tree1.2.png", "res://Arts/blue_circle.png", "res://Arts/bord-petonquev3.png", "res://Arts/boule1.png", "res://Arts/boule2.png", "res://Arts/boule3.png", "res://Arts/cochonnet1.png", "res://Arts/precision_bar.png", "res://Arts/precision_cursor.png", "res://Arts/red_circle.png", "res://Arts/sj_frame.png", "res://Arts/tileable_grass_00.png", "res://Arts/tileable_grass_01.png", "res://Credits.tscn", "res://Env/default_env.tres", "res://Fonts/Fonts-Button-actionJ.tres", "res://Fonts/Fonts-PoetsenOne-14.tres", "res://Fonts/Fonts-PoetsenOne-25.tres", "res://Fonts/Fonts-PoetsenOne.tres", "res://Fonts/Orbitronio.tres", "res://Fonts/WorldWorstFont.tres", "res://Fonts/lethal-injector-regular.tres", "res://Logos/OpenGameRoom.jpg", "res://Logos/icon.png", "res://Menu.tscn", "res://Musics/Main Theme song Version Final.mp3", "res://Musics/astronomerde v2.mp3", "res://Musics/boostiooooo v3.2.mp3", "res://Musics/water world v2.mp3", "res://Musics/écran de selection.mp3", "res://Options.tscn", "res://Petonque.tscn", "res://Ressources/Physics/Boule_physicsmaterial.tres", "res://Ressources/Sprites_Frames/Timmy.tres", "res://Scenes/Boule.tscn", "res://Scenes/Cochonet.tscn", "res://Scenes/MiniMap.tscn", "res://Scenes/Minimap_Viewport.gd", "res://Scenes/PrecisionSet.tscn", "res://Scenes/Viseur.tscn", "res://Scenes/stars_node.tscn", "res://Scripts/Boule.gd", "res://Scripts/CheatCodeDetector.gd", "res://Scripts/Cochonet.gd", "res://Scripts/Credits.gd", "res://Scripts/Menu.gd", "res://Scripts/MiniMap.gd", "res://Scripts/Node2D.gd", "res://Scripts/Options.gd", "res://Scripts/Petonque.gd", "res://Scripts/PrecisionNode.gd", "res://Scripts/Viseur.gd", "res://Scripts/globals.gd", "res://Scripts/stars_texturenode.gd", "res://Scripts/stars_viewport.gd", "res://Sounds/boules en mains.mp3", "res://Sounds/boules qui se tapent.mp3", "res://Sounds/boules qui se tapent2.mp3", "res://TileSet/Petonque_Tileset.tres", "res://Voices-Line/0.mp3", "res://Voices-Line/1.mp3", "res://Voices-Line/10.mp3", "res://Voices-Line/11.mp3", "res://Voices-Line/12.mp3", "res://Voices-Line/13.mp3", "res://Voices-Line/2.mp3", "res://Voices-Line/3.mp3", "res://Voices-Line/4.mp3", "res://Voices-Line/5.mp3", "res://Voices-Line/6.mp3", "res://Voices-Line/7.mp3", "res://Voices-Line/8.mp3", "res://Voices-Line/9.mp3", "res://Voices-Line/Applaudissements.mp3", "res://Voices-Line/Defeat.mp3", "res://Voices-Line/I need Healing.mp3", "res://Voices-Line/TIMMY TIMMY TIMMY.mp3", "res://Voices-Line/Team 1.mp3", "res://Voices-Line/Team 2.mp3", "res://Voices-Line/To.mp3", "res://Voices-Line/Victory.mp3", "res://Voices-Line/Whouah.mp3", "res://Voices-Line/boo.mp3", "res://change_log.gd" )
+export_filter="all_resources"
 include_filter=""
-exclude_filter=""
-export_path="Build/cosmo petonque v.0.0.5.exe"
+exclude_filter="AA_Out_of_Build/*"
+export_path="Build/cosmo petonque v.0.0.5.bis.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -17,7 +16,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
