--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="AA_Out_of_Build/*"
-export_path="Build/cosmo petonque v.0.0.5.bis.exe"
+export_path="Build/cosmo petonque v.0.0.6.exe"
 script_export_mode=1
 script_encryption_key=""
 
