--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="AA_Out_of_Build/*"
-export_path="Build/cosmo petonque v.0.0.6.exe"
+export_path="Build/cosmo petonque v.0.0.9.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -39,3 +39,28 @@ application/product_name=""
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="Build/cosmo_petonque_v.0.0.9.x86_64"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
