--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="AA_Out_of_Build/*"
-export_path="Build/cosmo petonque v.0.0.9.exe"
+export_path="Build/cosmo petonque.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -44,12 +44,12 @@ application/trademarks=""
 
 name="Linux/X11"
 platform="Linux/X11"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="AA_Out_of_Build/*"
-export_path="Build/cosmo_petonque_v.0.0.9.x86_64"
+export_path="Build/cosmo_petonque.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="AA_Out_of_Build/*"
-export_path="Build/cosmo_petonque_v.0.0.9.html"
+export_path="Build/HTML/index.html"
 script_export_mode=1
 script_encryption_key=""
 
